--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "devDependencies": {
     "bower": "^1.7.0",
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-bower": "0.0.13"
   },
   "dependencies": {
     "laravel-elixir-jade": "^0.1.9",
